--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
+    "com.singularitygroup.hotreload": "git+https://gitlab.hotreload.net/root/hot-reload-releases.git#1.12.9",
     "com.unity.ai.navigation": "2.0.0",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.2d": "2.0.0",
     "com.unity.feature.development": "1.0.2",
     "com.unity.postprocessing": "3.4.0",
+    "com.unity.render-pipelines.universal": "16.0.5",
     "com.unity.timeline": "1.8.6",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.8.0",
